--- a/source/markup/sass/blocks/badge.scss
+++ b/source/markup/sass/blocks/badge.scss
@@ -1,5 +1,11 @@
 .badge {
-  display: block;
+  font-family: "Roboto";
+  color: white;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 700;
+
+  border-radius: 5px;
 }
 
 .badge--c {
