--- a/source/markup/sass/blocks/playlist.scss
+++ b/source/markup/sass/blocks/playlist.scss
@@ -17,9 +17,20 @@
 .playlist__mood {
   padding-left: 0;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
   list-style: none;
 }
 
 .playlist__tone {
-  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+
+  width: 41px;
+  height: 28px;
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
 }
