--- a/source/markup/sass/style.scss
+++ b/source/markup/sass/style.scss
@@ -1,4 +1,5 @@
 @import "./base/normalize.scss";
+@import "./base/fonts.scss";
 @import "mixins.scss";
 @import "variables.scss";
 @import "./blocks/playlist.scss";
